--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/rokserak/zaklucna_nodejs#readme",
   "dependencies": {
     "assert": "^1.4.1",
+    "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "mysql": "^2.15.0",
     "pug": "^2.0.0-rc.4",
     "python-bridge": "^1.0.3",
-    "python-shell": "^0.5.0"
+    "python-shell": "^0.5.0",
+    "wait.for": "^0.6.6"
   }
 }
